Configurable benchmark profiles